--- a/Generate/Generate.csproj
+++ b/Generate/Generate.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GeometryModel\Room.cs" />
     <Compile Include="Utilities\Logger.cs" />
+    <None Include="_testcomman.cs" />
     <EmbeddedResource Include="SimulationForm.resx">
       <DependentUpon>SimulationForm.cs</DependentUpon>
     </EmbeddedResource>
