--- a/Generate/Generate.csproj
+++ b/Generate/Generate.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -63,6 +64,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GeometryModel\Room.cs" />
     <Compile Include="Utilities\Logger.cs" />
+    <Compile Include="Utilities\Utils.cs" />
     <None Include="_testcomman.cs" />
     <EmbeddedResource Include="SimulationForm.resx">
       <DependentUpon>SimulationForm.cs</DependentUpon>
