move works again. sometimes misc nullreference in parallel for, cost visualization

--- a/Generate/Generate.csproj
+++ b/Generate/Generate.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GeometryModel\Costs.cs" />
     <Compile Include="GeometryModel\IGeometry.cs" />
     <Compile Include="Utilities\MyInterlockedExchangeExampleClass.cs" />
     <Compile Include="Utilities\ImageSaver.cs" />
