--- a/Generate/Generate.csproj
+++ b/Generate/Generate.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="GeometryModel\Costs.cs" />
     <Compile Include="GeometryModel\IGeometry.cs" />
+    <Compile Include="Simulation\Simulation.cs" />
     <Compile Include="Utilities\MyInterlockedExchangeExampleClass.cs" />
     <Compile Include="Utilities\ImageSaver.cs" />
     <Compile Include="GeometryModel\RoomType.cs" />
