--- a/Generate/Generate.csproj
+++ b/Generate/Generate.csproj
@@ -56,6 +56,7 @@
     <Compile Include="GeometryModel\IGeometry.cs" />
     <Compile Include="GeometryModel\LineAndCost.cs" />
     <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="Simulation\ModelType.cs" />
     <Compile Include="Simulation\Simulate.cs" />
     <Compile Include="Utilities\MyInterlockedExchangeExampleClass.cs" />
     <Compile Include="Utilities\ImageSaver.cs" />
