--- a/.gitignore
+++ b/.gitignore
@@ -269,3 +269,8 @@ __pycache__/
 
 # Cake - Uncomment if you are using it
 # tools/
+/.sonarqube
+/Screens/19-11-19-10-31_Normal.rar
+/Screens/19-11-19-10-31_Normal.zip
+/Screens/19-11-19-10-52_Normal.rar
+/Screens
