--- a/GenerateTest/GenerateTest.csproj
+++ b/GenerateTest/GenerateTest.csproj
@@ -46,6 +46,9 @@
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.1.3.2\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.12.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.12.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
@@ -53,10 +56,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GeometryModel\MyLineTests.cs" />
-    <Compile Include="GeometryModel\MyPointTests.cs" />
-    <Compile Include="GeometryModel\MyRoomTests.cs" />
-    <Compile Include="GeometryModel\RoomTypeTests.cs" />
+    <Compile Include="ModelStorage.cs" />
     <Compile Include="MoveCasesTest.cs" />
     <Compile Include="Simulation\CostCalculationServiceTests.cs" />
     <Compile Include="Simulation\ModelTests.cs" />
@@ -74,6 +74,9 @@
       <Project>{3674FF68-AFEC-405C-8E09-52E3F7E51B0E}</Project>
       <Name>Generate</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="GeometryModel\" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
