--- a/Diploma2/Diploma2.csproj
+++ b/Diploma2/Diploma2.csproj
@@ -72,9 +72,11 @@
     <Compile Include="Model\Costs.cs" />
     <Compile Include="Model\LineAndCost.cs" />
     <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="Services\Action.cs" />
     <Compile Include="Services\CostCalculationService.cs" />
     <Compile Include="Services\ModelConfigurations.cs" />
-    <Compile Include="Services\Simulate.cs" />
+    <Compile Include="Services\ProgressEventArgs.cs" />
+    <Compile Include="Services\Simulation.cs" />
     <Compile Include="Utilities\ImageSaver.cs" />
     <Compile Include="Utilities\Logger.cs" />
     <Compile Include="Utilities\MyInterlockedExchangeExampleClass.cs" />
