cleanup, simulation broken, but vey big cleanup

--- a/Diploma2/Diploma2.csproj
+++ b/Diploma2/Diploma2.csproj
@@ -76,6 +76,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ModelStorage.cs" />
+    <Compile Include="Model\ExitCondition.cs" />
     <Compile Include="Model\Cost.cs" />
     <Compile Include="Model\LineAndCost.cs" />
     <Compile Include="Properties\Annotations.cs" />
